--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author": "Henrique Jesus <henrique.jesus128@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@types/express": "^4.17.17",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "@types/express": "^4.17.17"
   }
 }
