--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "typescript": "^5.0.2",
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "typescript": "^5.0.2"
   }
 }
