--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Henrique Jesus <henrique.jesus128@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.10.0",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
