--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/pg": "^8.6.6",
+    "@types/pg-format": "^1.0.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.2"
   }
 }
