--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "git@github.com:henriquejesus128/Contact-Book-API.git",
   "author": "Henrique Jesus <henrique.jesus128@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --ignore-watch node_modules --rs --cls src/server.ts"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.10.0",
