--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "dev": "ts-node-dev --ignore-watch node_modules --rs --cls src/server.ts"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.10.0",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
