--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/node": "^18.15.5",
     "@types/pg": "^8.6.6",
     "@types/pg-format": "^1.0.2",
     "ts-node-dev": "^2.0.0",
