add data base url && node env

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DATABASE_URL=postgres://PGUSER:PGPASSWORD@PGHOST:PGPORT/PGDATABASE
+DATABASE_URL=postgres://nextage:nqj297@localhost:5432/contact_book
+NODE_ENV=dev
 
 PORT=3000
 PGHOST=localhost
