--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "author": "Henrique Jesus <henrique.jesus128@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --ignore-watch node_modules --rs --cls src/server.ts"
+    "dev": "ts-node-dev --ignore-watch node_modules --rs --cls src/server.ts",
+    "build": "tsc",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "pg-format": "^1.0.4",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.12",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
