--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.5",
     "@types/pg": "^8.6.6",
     "@types/pg-format": "^1.0.2",
