--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "pg": "^8.10.0",
     "pg-format": "^1.0.4",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.12",
+    "typeorm": "0.3.10",
     "yup": "^1.0.2"
   },
   "devDependencies": {
