--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "pg-format": "^1.0.4",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.3.10",
-    "yup": "^1.0.2"
+    "yup": "0.32.11"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
