--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pg": "^8.10.0",
     "pg-format": "^1.0.4",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.9.1",
     "typeorm": "0.3.10",
     "yup": "0.32.11"
   },
